--- a/index.html
+++ b/index.html
@@ -5,8 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our conceptual page</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="https://icons8.com/icon/bMylUSWbVIBr/cow" type="image/x-icon">
+
 </head>
 <body>
-    <h1>Hello world</h1>
+    <div class="hero">
+        <h1>The Cow</h1>
+
+    </div>
+
+    <div class="article">
+        <h2>An Essay About A Cow</h2>
+        <p>The Cow is a very useful pet animal. <span class="imp">Cow give us milk</span>. A successful domestic animal kept by people at home for many purposes. It is a four-footed female animal having a large body, two horns, two eyes, two ears, one nose, one mouth, one head, a big back, and also a stomach. She eats a large amount of food at one Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quis optio quae quaerat magni! Voluptatem nostrum fugiat quis a sit similique corrupti consectetur tempore fuga nihil dolore, dolorum rem modi nam incidunt ex soluta earum. Exercitationem sequi commodi doloremque, hic omnis repellendus ratione, dolores deleniti necessitatibus facilis illo perferendis minus?
+
+        </p>
+    </div>
+    
 </body>
 </html>
